// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QR1: message conformance > adt-a01-basic.hl7 — pipeline output matches snapshot 1`] = `
"adt-a01-basic.hl7
  segments: MSH(12) EVN(2) PID(13) PV1(3)
  diagnostics: 0"
`;

exports[`QR1: message conformance > adt-a01-basic.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 0,
  "diagnostics": [],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "ADT_APP",
        "FACILITY_A",
        "RECV_APP",
        "FACILITY_B",
        "20260309120000",
        "",
        [
          "ADT",
          "A01",
          "ADT_A01",
        ],
        "MSG00001",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "A01",
        "20260309120000",
      ],
      "segment": "EVN",
    },
    {
      "fields": [
        "1",
        "",
        [
          "12345",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "DOE",
          "JOHN",
          "A",
        ],
        "",
        "19800101",
        "M",
        "",
        "",
        [
          "123 MAIN ST",
          "",
          "ANYTOWN",
          "NY",
          "12345",
        ],
        "",
        "555-555-1234",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "I",
        [
          "ICU",
          "101",
          "A",
        ],
      ],
      "segment": "PV1",
    },
  ],
}
`;

exports[`QR1: message conformance > adt-a01-full.hl7 — pipeline output matches snapshot 1`] = `
"adt-a01-full.hl7
  segments: MSH(16) EVN(5) PID(22) PD1(4) NK1(5) PV1(44) PV2(3) DG1(6) IN1(12)
  diagnostics: 6
    - [field-max-length] Field PV1-39 exceeds max length of 2 (actual: 6)
    - [field-max-length] Field IN1-12 exceeds max length of 8 (actual: 28)
    - [extra-components] Component IN1-12.2 is beyond the defined components for DT (max: 1 in v2.5.1)
    - [extra-components] Component IN1-12.3 is beyond the defined components for DT (max: 1 in v2.5.1)
    - [extra-components] Component IN1-12.4 is beyond the defined components for DT (max: 1 in v2.5.1)
    - [extra-components] Component IN1-12.5 is beyond the defined components for DT (max: 1 in v2.5.1)"
`;

exports[`QR1: message conformance > adt-a01-full.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 6,
  "diagnostics": [
    {
      "message": "Field PV1-39 exceeds max length of 2 (actual: 6)",
      "place": {
        "end": {
          "column": 191,
          "line": 6,
          "offset": 770,
        },
        "start": {
          "column": 185,
          "line": 6,
          "offset": 764,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Field IN1-12 exceeds max length of 8 (actual: 28)",
      "place": {
        "end": {
          "column": 146,
          "line": 9,
          "offset": 1013,
        },
        "start": {
          "column": 114,
          "line": 9,
          "offset": 981,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component IN1-12.2 is beyond the defined components for DT (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 146,
          "line": 9,
          "offset": 1013,
        },
        "start": {
          "column": 114,
          "line": 9,
          "offset": 981,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component IN1-12.3 is beyond the defined components for DT (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 146,
          "line": 9,
          "offset": 1013,
        },
        "start": {
          "column": 114,
          "line": 9,
          "offset": 981,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component IN1-12.4 is beyond the defined components for DT (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 146,
          "line": 9,
          "offset": 1013,
        },
        "start": {
          "column": 114,
          "line": 9,
          "offset": 981,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component IN1-12.5 is beyond the defined components for DT (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 146,
          "line": 9,
          "offset": 1013,
        },
        "start": {
          "column": 114,
          "line": 9,
          "offset": 981,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "ADT_APP",
        "HOSP_A",
        "RECV_SYS",
        "HOSP_B",
        "20260401083000",
        "",
        [
          "ADT",
          "A01",
          "ADT_A01",
        ],
        "CTRL0042",
        "P",
        "2.5.1",
        "",
        "",
        "AL",
        "NE",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "A01",
        "20260401083000",
        "",
        "",
        [
          "ADMITTER",
          "JANE",
          "M",
        ],
      ],
      "segment": "EVN",
    },
    {
      "fields": [
        "1",
        "",
        [
          [
            "98765",
            "",
            "",
            "MRN",
            "MR",
          ],
          [
            "555-12-3456",
            "",
            "",
            "SSN",
            "SS",
          ],
        ],
        "",
        [
          "SMITH",
          "ALICE",
          "M",
          "JR",
          "Dr",
        ],
        "",
        "19750315",
        "F",
        "",
        [
          "2106-3",
          "White",
          "CDCREC",
        ],
        [
          "456 OAK AVE",
          "",
          "METROPOLIS",
          "IL",
          "62960",
          "USA",
          "H",
        ],
        "",
        [
          [
            "217-555-9876",
            "PRN",
            "PH",
          ],
          [
            "217-555-4321",
            "WPN",
            "PH",
          ],
        ],
        [
          "217-555-0000",
          "WPN",
          "PH",
        ],
        [
          "ENG",
          "English",
          "HL70296",
        ],
        [
          "M",
          "Married",
          "HL70002",
        ],
        [
          "CHR",
          "Christian",
          "HL70006",
        ],
        [
          "ACCT001",
          "",
          "",
          "HOSP_A",
        ],
        "123-45-6789",
        "",
        "",
        [
          "H",
          "Hispanic or Latino",
          "HL70189",
        ],
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "",
        "",
        "",
        [
          "1234567890",
          "ATTENDING",
          "DOCTOR",
          "A",
          "",
          "",
          "MD",
        ],
      ],
      "segment": "PD1",
    },
    {
      "fields": [
        "1",
        [
          "SMITH",
          "BOB",
          "R",
        ],
        [
          "SPO",
          "Spouse",
          "HL70063",
        ],
        [
          "789 OAK AVE",
          "",
          "METROPOLIS",
          "IL",
          "62960",
        ],
        "217-555-6543",
      ],
      "segment": "NK1",
    },
    {
      "fields": [
        "1",
        "I",
        [
          "ICU",
          "201",
          "A",
          "HOSP_A",
          "",
          "",
          "",
          "LVL2",
        ],
        "",
        "",
        [
          "ICU",
          "200",
          "B",
        ],
        [
          "1234567890",
          "ATTENDING",
          "DOCTOR",
          "A",
          "",
          "",
          "MD",
        ],
        [
          "9876543210",
          "REFERRING",
          "DOC",
          "B",
          "",
          "",
          "MD",
        ],
        "",
        "MED",
        "",
        "",
        "",
        "7",
        "",
        "",
        [
          "1234567890",
          "ATTENDING",
          "DOCTOR",
          "A",
          "",
          "",
          "MD",
        ],
        "IP",
        "",
        "SI",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "HOSP_A",
        "",
        "",
        "",
        "",
        "20260401083000",
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "",
        "",
        [
          "",
          "Chest pain, unspecified",
        ],
      ],
      "segment": "PV2",
    },
    {
      "fields": [
        "1",
        "",
        [
          "R07.9",
          "Chest pain, unspecified",
          "ICD10",
        ],
        "",
        "",
        "A",
      ],
      "segment": "DG1",
    },
    {
      "fields": [
        "1",
        "BCBS001",
        [
          "BCBS",
          "Blue Cross Blue Shield",
        ],
        [
          "PO BOX 1234",
          "",
          "SPRINGFIELD",
          "IL",
          "62701",
        ],
        "",
        "",
        "GRP12345",
        "",
        [
          "SMITH",
          "BOB",
          "R",
        ],
        "SPO",
        "19730812",
        [
          "456 OAK AVE",
          "",
          "METROPOLIS",
          "IL",
          "62960",
        ],
      ],
      "segment": "IN1",
    },
  ],
}
`;

exports[`QR1: message conformance > dft-p03-charge.hl7 — pipeline output matches snapshot 1`] = `
"dft-p03-charge.hl7
  segments: MSH(12) EVN(2) PID(8) PV1(18) FT1(27)
  diagnostics: 3
    - [field-max-length] Field PV1-10 exceeds max length of 3 (actual: 4)
    - [field-max-length] Field PV1-18 exceeds max length of 2 (actual: 8)
    - [extra-components] Component FT1-27.7 is beyond the defined components for CE (max: 6 in v2.5.1)"
`;

exports[`QR1: message conformance > dft-p03-charge.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 3,
  "diagnostics": [
    {
      "message": "Field PV1-10 exceeds max length of 3 (actual: 4)",
      "place": {
        "end": {
          "column": 30,
          "line": 4,
          "offset": 188,
        },
        "start": {
          "column": 26,
          "line": 4,
          "offset": 184,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Field PV1-18 exceeds max length of 2 (actual: 8)",
      "place": {
        "end": {
          "column": 48,
          "line": 4,
          "offset": 206,
        },
        "start": {
          "column": 40,
          "line": 4,
          "offset": 198,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component FT1-27.7 is beyond the defined components for CE (max: 6 in v2.5.1)",
      "place": {
        "end": {
          "column": 110,
          "line": 5,
          "offset": 316,
        },
        "start": {
          "column": 87,
          "line": 5,
          "offset": 293,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "BILLING",
        "HOSP_A",
        "FIN_SYS",
        "HOSP_A",
        "20260401120000",
        "",
        [
          "DFT",
          "P03",
          "DFT_P03",
        ],
        "FIN00001",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "P03",
        "20260401120000",
      ],
      "segment": "EVN",
    },
    {
      "fields": [
        "1",
        "",
        [
          "77889",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "BROWN",
          "MICHAEL",
          "J",
        ],
        "",
        "19550918",
        "M",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "I",
        [
          "SURG",
          "601",
          "A",
        ],
        "",
        "",
        "",
        "",
        "",
        "",
        "SURG",
        "",
        "",
        "",
        "",
        "",
        "",
        "IP",
        "VISIT001",
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "1",
        "",
        "",
        "20260401",
        "20260401",
        "CG",
        [
          "99213",
          "Office Visit Level 3",
          "CPT",
        ],
        "",
        "1",
        "",
        "",
        "150.00",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        [
          "2345",
          "BILLING",
          "DOC",
          "R",
          "",
          "",
          "MD",
        ],
      ],
      "segment": "FT1",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-crlf-line-endings.hl7 — pipeline output matches snapshot 1`] = `
"edge-crlf-line-endings.hl7
  segments: MSH(12) PID(8) PV1(3)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-crlf-line-endings.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 41,
          "line": 2,
          "offset": 106,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260301120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG006",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "12345",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "DOE",
          "JOHN",
        ],
        "",
        "19800101",
        "M",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "I",
        [
          "ICU",
          "101",
          "A",
        ],
      ],
      "segment": "PV1",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-custom-delimiters.hl7 — pipeline output matches snapshot 1`] = `
"edge-custom-delimiters.hl7
  segments: MSH(12) PID(8)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-custom-delimiters.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 43,
          "line": 2,
          "offset": 108,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "#",
        "!@%*",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260301120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG007",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "12345",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "DOE",
          "JOHN",
          "A",
        ],
        "",
        "19800101",
        "M",
      ],
      "segment": "PID",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-empty-segments.hl7 — pipeline output matches snapshot 1`] = `
"edge-empty-segments.hl7
  segments: MSH(12) PID(14) PV1(38) OBX(13)
  diagnostics: 8
    - [no-trailing-empty-field] Segment has 13 trailing empty fields
    - [no-trailing-empty-field] Segment has 38 trailing empty fields
    - [required-fields] Required field PID-3 (Patient Identifier List) is missing or empty
    - [required-fields] Required field PID-5 (Patient Name) is missing or empty
    - [required-fields] Required field PV1-2 (Patient Class) is missing or empty
    - [required-fields] Required field OBX-3 (Observation Identifier) is missing or empty
    - [required-fields] Required field OBX-11 (Observation Result Status) is missing or empty
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-empty-segments.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 8,
  "diagnostics": [
    {
      "message": "Segment has 13 trailing empty fields",
      "place": {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 85,
        },
        "start": {
          "column": 7,
          "line": 2,
          "offset": 72,
        },
      },
      "ruleId": "no-trailing-empty-field",
      "source": "hl7v2-lint",
    },
    {
      "message": "Segment has 38 trailing empty fields",
      "place": {
        "end": {
          "column": 43,
          "line": 3,
          "offset": 128,
        },
        "start": {
          "column": 5,
          "line": 3,
          "offset": 90,
        },
      },
      "ruleId": "no-trailing-empty-field",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field PID-3 (Patient Identifier List) is missing or empty",
      "place": {
        "end": {
          "column": 8,
          "line": 2,
          "offset": 73,
        },
        "start": {
          "column": 8,
          "line": 2,
          "offset": 73,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field PID-5 (Patient Name) is missing or empty",
      "place": {
        "end": {
          "column": 10,
          "line": 2,
          "offset": 75,
        },
        "start": {
          "column": 10,
          "line": 2,
          "offset": 75,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field PV1-2 (Patient Class) is missing or empty",
      "place": {
        "end": {
          "column": 6,
          "line": 3,
          "offset": 91,
        },
        "start": {
          "column": 6,
          "line": 3,
          "offset": 91,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field OBX-3 (Observation Identifier) is missing or empty",
      "place": {
        "end": {
          "column": 10,
          "line": 4,
          "offset": 138,
        },
        "start": {
          "column": 10,
          "line": 4,
          "offset": 138,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field OBX-11 (Observation Result Status) is missing or empty",
      "place": {
        "end": {
          "column": 18,
          "line": 4,
          "offset": 146,
        },
        "start": {
          "column": 18,
          "line": 4,
          "offset": 146,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 85,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260301120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG005",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "1",
        "ST",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-escaped-delimiters.hl7 — pipeline output matches snapshot 1`] = `
"edge-escaped-delimiters.hl7
  segments: MSH(12) PID(8) OBX(11)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-escaped-delimiters.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 56,
          "line": 2,
          "offset": 121,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260101120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG001",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "12345",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "DOE&SMITH",
          "JOHN^JANE",
        ],
        "",
        "19800101",
        "M",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "ST",
        "NOTE",
        "",
        "Result contains pipe | and ampersand & and caret ^ and tilde ~ and backslash \\ chars",
        "",
        "",
        "",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-field-repetitions.hl7 — pipeline output matches snapshot 1`] = `
"edge-field-repetitions.hl7
  segments: MSH(12) PID(13)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-field-repetitions.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 188,
          "line": 2,
          "offset": 253,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260301120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG004",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "10001",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "JONES",
          "MANY",
          "PHONES",
        ],
        "",
        "19850101",
        "F",
        "",
        "",
        [
          "100 MAIN ST",
          "",
          "CITY",
          "ST",
          "12345",
        ],
        "",
        [
          "555-0001",
          "555-0002",
          "555-0003",
          "555-0004",
          "555-0005",
          "555-0006",
          "555-0007",
          "555-0008",
          "555-0009",
          "555-0010",
          "555-0011",
          "555-0012",
        ],
      ],
      "segment": "PID",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-non-ascii.hl7 — pipeline output matches snapshot 1`] = `
"edge-non-ascii.hl7
  segments: MSH(12) PID(11) NK1(3)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-non-ascii.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 92,
          "line": 2,
          "offset": 157,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 66,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SENDER",
        "FAC",
        "RECV",
        "FAC",
        "20260201120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG002",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "54321",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "MÜLLER",
          "JOSÉ",
          "Ñ",
        ],
        "",
        "19750315",
        "M",
        "",
        "",
        [
          "Straße der Einheit 42",
          "",
          "München",
          "BY",
          "80331",
          "DEU",
        ],
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        [
          "GARCÍA",
          "FRANÇOISE",
        ],
        "SPO",
      ],
      "segment": "NK1",
    },
  ],
}
`;

exports[`QR1: message conformance > edge-z-segments.hl7 — pipeline output matches snapshot 1`] = `
"edge-z-segments.hl7
  segments: MSH(12) PID(8) ZVN(3) ZPD(5)
  diagnostics: 1
    - [segment-order] Unexpected segment 'PID'. Expected: EVN, SFT"
`;

exports[`QR1: message conformance > edge-z-segments.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Unexpected segment 'PID'. Expected: EVN, SFT",
      "place": {
        "end": {
          "column": 45,
          "line": 2,
          "offset": 114,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 70,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "VENDOR_APP",
        "FAC",
        "RECV",
        "FAC",
        "20260301120000",
        "",
        [
          "ADT",
          "A01",
        ],
        "MSG003",
        "P",
        "2.5",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "99999",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "TEST",
          "PATIENT",
        ],
        "",
        "19900101",
        "M",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "CUSTOM_VENDOR_DATA",
        [
          "VALUE1",
          "VALUE2",
          "VALUE3",
        ],
      ],
      "segment": "ZVN",
    },
    {
      "fields": [
        "1",
        "EXTENDED_FIELD_1",
        "EXTENDED_FIELD_2",
        "EXTENDED_FIELD_3",
        "EXTENDED_FIELD_4",
      ],
      "segment": "ZPD",
    },
  ],
}
`;

exports[`QR1: message conformance > mdm-t02-document.hl7 — pipeline output matches snapshot 1`] = `
"mdm-t02-document.hl7
  segments: MSH(12) EVN(2) PID(8) PV1(3) TXA(17) OBX(11)
  diagnostics: 6
    - [required-fields] Required field TXA-12 (Unique Document Number) is missing or empty
    - [field-max-length] Field TXA-17 exceeds max length of 2 (actual: 22)
    - [extra-components] Component TXA-2.2 is beyond the defined components for IS (max: 1 in v2.5.1)
    - [extra-components] Component TXA-2.3 is beyond the defined components for IS (max: 1 in v2.5.1)
    - [extra-components] Component TXA-17.2 is beyond the defined components for ID (max: 1 in v2.5.1)
    - [extra-components] Component TXA-17.3 is beyond the defined components for ID (max: 1 in v2.5.1)"
`;

exports[`QR1: message conformance > mdm-t02-document.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 6,
  "diagnostics": [
    {
      "message": "Required field TXA-12 (Unique Document Number) is missing or empty",
      "place": {
        "end": {
          "column": 100,
          "line": 5,
          "offset": 278,
        },
        "start": {
          "column": 100,
          "line": 5,
          "offset": 278,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Field TXA-17 exceeds max length of 2 (actual: 22)",
      "place": {
        "end": {
          "column": 129,
          "line": 5,
          "offset": 307,
        },
        "start": {
          "column": 105,
          "line": 5,
          "offset": 283,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component TXA-2.2 is beyond the defined components for IS (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 38,
          "line": 5,
          "offset": 216,
        },
        "start": {
          "column": 7,
          "line": 5,
          "offset": 185,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component TXA-2.3 is beyond the defined components for IS (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 38,
          "line": 5,
          "offset": 216,
        },
        "start": {
          "column": 7,
          "line": 5,
          "offset": 185,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component TXA-17.2 is beyond the defined components for ID (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 129,
          "line": 5,
          "offset": 307,
        },
        "start": {
          "column": 105,
          "line": 5,
          "offset": 283,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component TXA-17.3 is beyond the defined components for ID (max: 1 in v2.5.1)",
      "place": {
        "end": {
          "column": 129,
          "line": 5,
          "offset": 307,
        },
        "start": {
          "column": 105,
          "line": 5,
          "offset": 283,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "DOCMGMT",
        "HOSP_A",
        "RECV_SYS",
        "HOSP_A",
        "20260322153000",
        "",
        [
          "MDM",
          "T02",
          "MDM_T02",
        ],
        "DOC00001",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "T02",
        "20260322153000",
      ],
      "segment": "EVN",
    },
    {
      "fields": [
        "1",
        "",
        [
          "55667",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "WILLIAMS",
          "SARAH",
          "K",
        ],
        "",
        "19650410",
        "F",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "I",
        [
          "MED",
          "501",
          "B",
        ],
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "1",
        [
          "HP",
          "History and Physical",
          "HL70270",
        ],
        "TX",
        "20260322150000",
        "",
        "20260322153000",
        "",
        "",
        "",
        "",
        [
          "8901",
          "AUTHOR",
          "DOC",
          "M",
          "",
          "",
          "MD",
        ],
        "",
        "",
        "",
        "",
        "",
        [
          "AU",
          "Authenticated",
          "HL70271",
        ],
      ],
      "segment": "TXA",
    },
    {
      "fields": [
        "1",
        "TX",
        [
          "HP",
          "History and Physical",
        ],
        "",
        "Patient presents with complaints of persistent headaches for the past 2 weeks.",
        "",
        "",
        "",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
  ],
}
`;

exports[`QR1: message conformance > orm-o01-order.hl7 — pipeline output matches snapshot 1`] = `
"orm-o01-order.hl7
  segments: MSH(12) PID(11) PV1(3) ORC(12) OBR(16)
  diagnostics: 1
    - [segment-order] Message ended prematurely. Expected: RQD"
`;

exports[`QR1: message conformance > orm-o01-order.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 1,
  "diagnostics": [
    {
      "message": "Message ended prematurely. Expected: RQD",
      "place": {
        "end": {
          "column": 113,
          "line": 5,
          "offset": 380,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "ORDER_SYS",
        "HOSP_A",
        "LAB_SYS",
        "HOSP_A",
        "20260315091500",
        "",
        [
          "ORM",
          "O01",
          "ORM_O01",
        ],
        "ORD20001",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "11223",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "GARCIA",
          "MARIA",
          "L",
        ],
        "",
        "19850622",
        "F",
        "",
        "",
        [
          "789 ELM ST",
          "",
          "SPRINGFIELD",
          "IL",
          "62701",
        ],
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "O",
        [
          "CLINIC",
          "300",
          "A",
        ],
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "NW",
        "ORD20001",
        "",
        "REQGRP001",
        "",
        "",
        "",
        "",
        "20260315091500",
        "",
        "",
        [
          "5678",
          "REQUESTING",
          "DOC",
          "A",
          "",
          "",
          "MD",
        ],
      ],
      "segment": "ORC",
    },
    {
      "fields": [
        "1",
        "ORD20001",
        "",
        [
          "80053",
          "Comprehensive Metabolic Panel",
          "CPT",
        ],
        "",
        "",
        "20260315091500",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "BLOOD",
        [
          "5678",
          "REQUESTING",
          "DOC",
          "A",
          "",
          "",
          "MD",
        ],
      ],
      "segment": "OBR",
    },
  ],
}
`;

exports[`QR1: message conformance > oru-r01-lab.hl7 — pipeline output matches snapshot 1`] = `
"oru-r01-lab.hl7
  segments: MSH(12) PID(8) ORC(5) OBR(26) OBX(11) OBX(11) OBX(11) OBX(11) OBX(11)
  diagnostics: 2
    - [field-max-length] Field OBR-25 exceeds max length of 1 (actual: 2)
    - [table-values] Field OBR-25 (Result Status) value 'HM' is not in table 0123 (Result Status)"
`;

exports[`QR1: message conformance > oru-r01-lab.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 2,
  "diagnostics": [
    {
      "message": "Field OBR-25 exceeds max length of 1 (actual: 2)",
      "place": {
        "end": {
          "column": 121,
          "line": 4,
          "offset": 288,
        },
        "start": {
          "column": 119,
          "line": 4,
          "offset": 286,
        },
      },
      "ruleId": "field-max-length",
      "source": "hl7v2-lint",
    },
    {
      "message": "Field OBR-25 (Result Status) value 'HM' is not in table 0123 (Result Status)",
      "place": {
        "end": {
          "column": 121,
          "line": 4,
          "offset": 288,
        },
        "start": {
          "column": 119,
          "line": 4,
          "offset": 286,
        },
      },
      "ruleId": "table-values",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "LAB_APP",
        "FACILITY_B",
        "ORDER_APP",
        "FACILITY_A",
        "20260309140000",
        "",
        [
          "ORU",
          "R01",
          "ORU_R01",
        ],
        "MSG00003",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "67890",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "SMITH",
          "JANE",
          "B",
        ],
        "",
        "19901215",
        "F",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "RE",
        "ORD001",
        "LAB001",
        "",
        "CM",
      ],
      "segment": "ORC",
    },
    {
      "fields": [
        "1",
        "ORD001",
        "LAB001",
        [
          "CBC",
          "Complete Blood Count",
          "LN",
        ],
        "",
        "",
        "20260309100000",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "BLOOD",
        [
          "1234",
          "ORDERING",
          "DOC",
        ],
        "",
        "",
        "",
        "",
        "",
        "",
        "20260309140000",
        "",
        "HM",
        "F",
      ],
      "segment": "OBR",
    },
    {
      "fields": [
        "1",
        "NM",
        [
          "WBC",
          "White Blood Cell Count",
          "LN",
        ],
        "",
        "7.5",
        "10*3/uL",
        "4.5-11.0",
        "N",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
    {
      "fields": [
        "2",
        "NM",
        [
          "RBC",
          "Red Blood Cell Count",
          "LN",
        ],
        "",
        "4.8",
        "10*6/uL",
        "4.0-5.5",
        "N",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
    {
      "fields": [
        "3",
        "NM",
        [
          "HGB",
          "Hemoglobin",
          "LN",
        ],
        "",
        "14.2",
        "g/dL",
        "12.0-16.0",
        "N",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
    {
      "fields": [
        "4",
        "NM",
        [
          "HCT",
          "Hematocrit",
          "LN",
        ],
        "",
        "42.1",
        "%",
        "36.0-46.0",
        "N",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
    {
      "fields": [
        "5",
        "NM",
        [
          "PLT",
          "Platelet Count",
          "LN",
        ],
        "",
        "250",
        "10*3/uL",
        "150-400",
        "N",
        "",
        "",
        "F",
      ],
      "segment": "OBX",
    },
  ],
}
`;

exports[`QR1: message conformance > siu-s12-schedule.hl7 — pipeline output matches snapshot 1`] = `
"siu-s12-schedule.hl7
  segments: MSH(12) SCH(12) PID(8) PV1(3) AIG(4)
  diagnostics: 4
    - [required-fields] Required field SCH-16 (Filler Contact Person) is missing or empty
    - [required-fields] Required field SCH-20 (Entered By Person) is missing or empty
    - [extra-components] Component AIG-3.7 is beyond the defined components for CE (max: 6 in v2.5.1)
    - [segment-order] Unexpected segment 'AIG'. Expected: DG1, OBX, PID, PV2, RGS"
`;

exports[`QR1: message conformance > siu-s12-schedule.hl7 — pipeline output matches snapshot 2`] = `
{
  "diagnosticCount": 4,
  "diagnostics": [
    {
      "message": "Required field SCH-16 (Filler Contact Person) is missing or empty",
      "place": {
        "end": {
          "column": 109,
          "line": 2,
          "offset": 199,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 91,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Required field SCH-20 (Entered By Person) is missing or empty",
      "place": {
        "end": {
          "column": 109,
          "line": 2,
          "offset": 199,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 91,
        },
      },
      "ruleId": "required-fields",
      "source": "hl7v2-lint",
    },
    {
      "message": "Component AIG-3.7 is beyond the defined components for CE (max: 6 in v2.5.1)",
      "place": {
        "end": {
          "column": 38,
          "line": 5,
          "offset": 307,
        },
        "start": {
          "column": 8,
          "line": 5,
          "offset": 277,
        },
      },
      "ruleId": "extra-components",
      "source": "hl7v2-lint",
    },
    {
      "message": "Unexpected segment 'AIG'. Expected: DG1, OBX, PID, PV2, RGS",
      "place": {
        "end": {
          "column": 40,
          "line": 5,
          "offset": 309,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 270,
        },
      },
      "ruleId": "segment-order",
      "source": "hl7v2-lint",
    },
  ],
  "result": [
    {
      "fields": [
        "|",
        "^~\\&",
        "SCHED_SYS",
        "HOSP_A",
        "RECV_SYS",
        "HOSP_A",
        "20260320100000",
        "",
        [
          "SIU",
          "S12",
          "SIU_S12",
        ],
        "SCH00001",
        "P",
        "2.5.1",
      ],
      "segment": "MSH",
    },
    {
      "fields": [
        "APT001",
        "APT001",
        "",
        "",
        "",
        [
          "ROUTINE",
          "Routine",
          "HL70276",
        ],
        "",
        "",
        "30",
        "MIN",
        [
          "",
          "",
          "30",
          "20260325140000",
          "20260325143000",
        ],
        [
          "9999",
          "SCHEDULER",
          "AUTO",
        ],
      ],
      "segment": "SCH",
    },
    {
      "fields": [
        "1",
        "",
        [
          "33445",
          "",
          "",
          "MRN",
        ],
        "",
        [
          "JOHNSON",
          "ROBERT",
          "T",
        ],
        "",
        "19700801",
        "M",
      ],
      "segment": "PID",
    },
    {
      "fields": [
        "1",
        "O",
        [
          "CARDIO",
          "410",
          "A",
        ],
      ],
      "segment": "PV1",
    },
    {
      "fields": [
        "1",
        "",
        [
          "4567",
          "CARDIOLOGIST",
          "HEART",
          "A",
          "",
          "",
          "MD",
        ],
        "P",
      ],
      "segment": "AIG",
    },
  ],
}
`;
